Add session controller, session service and exception handler to http response
